# dotfiles-wayland

./: #main.org#  .gitignore  README.md  Readme.org  dir_change.sh  dir_change_2.sh  main.org  setup.sh  theme  theme_selector.sh
.config/ags/: config.js
.config/eww/: bar.yuck  bottombar.yuck  eww.scss  eww.scss.old  eww.scss~  eww.yuck  music.yuck  popup.yuck  powermenu.yuck  powermenu.yuck~  screenshotmenu.yuck
.config/eww/tools/eww-bluetooth/: Cargo.toml
.config/eww/tools/eww-bluetooth/src/: main.rs
.config/eww/tools/eww-wifi/: Cargo.toml
.config/eww/tools/eww-wifi/src/: main.rs
.config/fish/: config.fish  fish_variables
.config/foot/: foot.ini
.config/helix/: config.toml
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/ironbar/: style.css
.config/kickoff/: config.toml
.config/kitty/: kitty.conf
.config/mako/: config
.config/mpd/: mpd.conf
.config/neofetch/: config.conf
.config/niri/: config.kdl  config.kdl.template
.config/nushell/: config.nu  env.nu  history.txt
.emacs.d/: .lsp-session-v1  custom.el  fonts.el  fonts.el~  init.el  init.el~  litigature.el  litigature.el~  modeline.el  org.el  packages.el  packages.el~  settings.el  tab-bar.el  theme.el  theme.el.template  tramp
eww/: bottombar.yuck  dashboard.yuck  eww.scss  eww.yuck  ewwbar.yuck  notes.yuck  powermenu.yuck
git/: .gitconfig
nvim/: lazy-lock.json
nvim.old/: init.lua
river/: init
sway/: config  config.save
swaylock/: config
systemd/: sway.service
waybar/: style.css
wezterm/: wezterm.lua
zathura/: zathurarc
(+285 files in other folders)
