[package]
name = "eww-bluetooth"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.0", features = ["bluetoothd"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
