[package]
name = "eww-wifi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-manager = "0.11.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
wifi-rs = "0.2.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
